data/all_generated_tests/raw_wast_tests/loop_TypeMismatchinControlFlowInstructions_1007.wast
;; 8. **Test for Loop with Incorrect Type in Implicit Label Jump**: Implement a loop where a backward jump (`br` instruction) targets a label with a stack state that does not match what the loop expects when re-entered.

(assert_invalid
  (module 
    (func $test_func 
      (local i32)
      (loop $loop_label 
        (i32.const 1)
        (br $loop_label)
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)